# HSIPL_auto_fastmcp

./: .gitignore  README.md  fast_mcp_note  pyproject.toml  server.py  test.py
src/hsipl_autotool/: fast_sam.py  hsi_plot.py  hsi_tools.py  transraw.py  utils.py
